.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Pension_Reporting_YTD__c.object
<CustomObject>
    <description>Pension Reporting YTD records - one per Employee-Post reference per tax year.</description>
    <fields>
        <fullName>xcdhcm__Contract_leaving_date__c</fullName>
        <inlineHelpText>Date on which the employee left this Post and did not move on to another Post with the Employer.</inlineHelpText>
        <label>Contract leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_EE_AVC_CEAVC__c</fullName>
        <label>Cum EE AVC (CEAVC)</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__AVC_EAVC__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_EE_add_pension_cont_CEAPC__c</fullName>
        <label>Cum EE add pension cont (CEAPC)</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__EE_additional_cont_EAPC__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_EE_cont_50_50_CEC2__c</fullName>
        <label>Cum EE cont 50/50 (CEC2)</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__EE_contribution_50_50_scheme__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_EE_cont_main_CEC1__c</fullName>
        <label>Cum EE cont main (CEC1)</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__EE_contribution_main_scheme__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_EE_other_add_cont__c</fullName>
        <label>Cum EE other add cont</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__Other_additional_EE_cont__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_ER_add_pension_cont_CRAPC__c</fullName>
        <inlineHelpText>Additional employer pension contributions (APCs) - YTD.</inlineHelpText>
        <label>Cum ER add pension cont (CRAPC)</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__ER_additional_cont_RAPC__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_ER_cont_CRC__c</fullName>
        <description>Employer contributions (these are not split over main and 50/50 sections).</description>
        <label>Cum ER cont (CRC)</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__ER_contribution_main_scheme__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_ER_other_add_cont__c</fullName>
        <label>Cum ER other add cont</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__Other_additional_ER_cont__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_add_regular_cont__c</fullName>
        <inlineHelpText>Additional regular contributions no longer open to new entrants.</inlineHelpText>
        <label>Cum add regular cont</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__Additional_regular_cont_ARC__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_added_years__c</fullName>
        <inlineHelpText>Added years contributions no longer open to new entrants.</inlineHelpText>
        <label>Cum added years</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__Added_years__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_pens_pay_50_50_CPP2__c</fullName>
        <label>Cum pens pay 50/50 (CPP2)</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__Post_pensionable_earnings_50_50_scheme__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_pens_pay_main_CPP1__c</fullName>
        <label>Cum pens pay main (CPP1)</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__Post_pensionable_earnings_main_scheme__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cum_shared_cost_AVC_CRAVC__c</fullName>
        <inlineHelpText>Employer contribution to AVC - YTD.</inlineHelpText>
        <label>Cum shared cost AVC (CRAVC)</label>
        <summarizedField>xcdhcm__Pension_Reporting__c.xcdhcm__Shared_cost_AVC_RAVC__c</summarizedField>
        <summaryForeignKey>xcdhcm__Pension_Reporting__c.xcdhcm__Pension_Reporting_YTD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date_joined_pension_scheme__c</fullName>
        <inlineHelpText>Records date when Employee first joined main pension scheme. Where no data are available may use Start date.</inlineHelpText>
        <label>Date joined pension scheme</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__DoB__c</fullName>
        <formula>xcdhcm__Personal__r.xcdhcm__DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DoB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer</label>
        <referenceTo>xcdhcm__Employer__c</referenceTo>
        <relationshipLabel>Pension Reporting YTDs</relationshipLabel>
        <relationshipName>Pension_Reporting_YTDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employment_leaving_date__c</fullName>
        <inlineHelpText>Date on which the employee left this employment.</inlineHelpText>
        <label>Employment leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Full_time_equivalent_final_pay__c</fullName>
        <inlineHelpText>Full time equivalent pensionable pay in respect of the employment for the scheme year (pre 2014 CARE scheme definition).</inlineHelpText>
        <label>Full time equivalent final pay</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Gender__c</fullName>
        <formula>LEFT(TEXT(xcdhcm__Personal__r.xcdhcm__Gender__c), 1)</formula>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Mobile_phone__c</fullName>
        <formula>xcdhcm__Personal__r.xcdhcm__Personal_mobile__c</formula>
        <label>Mobile phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_Summary_YTD__c</fullName>
        <label>Pay Summary YTD</label>
        <referenceTo>xcdhcm__Pay_Summary_YTD__c</referenceTo>
        <relationshipLabel>Pension Reporting YTDs</relationshipLabel>
        <relationshipName>Pension_Reporting_YTDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_no__c</fullName>
        <formula>xcdhcm__Pay_Summary_YTD__r.xcdhcm__Employee__r.xcdhcm__Payroll_no__c</formula>
        <label>Payroll no</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pension_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up latest Pension reporting record in the current tax year.</description>
        <label>Pension Reporting</label>
        <referenceTo>xcdhcm__Pension_Reporting__c</referenceTo>
        <relationshipLabel>Pension Reporting YTDs</relationshipLabel>
        <relationshipName>Pension_Reporting_YTDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pension_reference__c</fullName>
        <label>Pension reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pension_scheme__c</fullName>
        <label>Pension scheme</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Personal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Personal</label>
        <referenceTo>xcdhcm__Personal__c</referenceTo>
        <relationshipLabel>Pension Reporting YTDs</relationshipLabel>
        <relationshipName>Pension_Reporting_YTDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reason_for_leaving__c</fullName>
        <label>Reason for leaving</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Pay review</fullName>
                </value>
                <value>
                    <fullName>New role</fullName>
                </value>
                <value>
                    <fullName>Change of working hours</fullName>
                </value>
                <value>
                    <fullName>New joiner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Corrected data error</fullName>
                </value>
                <value>
                    <fullName>LGPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Staging_date__c</fullName>
        <label>Staging date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_email__c</fullName>
        <formula>xcdhcm__Personal__r.xcdhcm__Work_email__c</formula>
        <label>Work email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_phone__c</fullName>
        <formula>xcdhcm__Personal__r.xcdhcm__Work_phone__c</formula>
        <label>Work phone</label>
        <type>Text</type>
    </fields>
    <label>Pension Reporting YTD</label>
    <nameField>
        <displayFormat>PRYTD-{0000}</displayFormat>
        <label>Pension Reporting YTD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pension Reporting YTDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>